<resources>
    <string name="app_name">Vật liệu xây dựng</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_battery_detail">BatteryDetail</string>
    <string name="action_View">Xem</string>
    <string name="action_Delete">Xóa</string>
    <string name="action_Update">Cập nhật</string>
    <string name="title_activity_battery__update">Battery_Update</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="title_activity_reset_password">Lấy lại mật khẩu</string>
    <string name="hint_email">Email</string>
    <string name="action_sign_in_short">Đăng ký</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mật khẩu ít nhất phải có 6 ký tự!</string>
    <string name="auth_failed">Đăng nhập thất bại</string>
    <string name="change_email">Đổi Email</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="send_password_reset_email">Gởi mật khẩu mới qua email</string>
    <string name="remove_user">Xóa người dùng</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Họ tên</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_link_to_register">Chưa có tài khoản, đăng ký mới</string>
    <string name="btn_link_to_login">Đã đăng ký. Đăng nhập !!</string>
    <string name="btn_forgot_password">Quên mật khẩu?</string>
    <string name="btn_reset_password">Reset mật khẩu</string>
    <string name="btn_back"><![CDATA[<< Quay về]]></string>
    <string name="hint_new_email">Email</string>
    <string name="btn_change">Đổi Email</string>
    <string name="btn_send">Gởi</string>
    <string name="btn_remove">Xóa</string>
    <string name="btn_sign_out">Thoát</string>
    <string name="lbl_forgot_password">Quên mật khẩu?</string>
    <string name="forgot_password_msg">Cung cấp email để nhận mật khẩu mới</string>
    <string name="btn_changePass">Đổi mật khẩu</string>
    <string name="btn_start">Sử dụng ngay</string>
    <string name="fullname">Họ tên</string>
    <string name="action_New">Thêm mới</string>
    <string name="title_activity_customer__un_completed_payment">Danh sách khách hàng còn nợ
    </string>
    <string name="hint_mobile">Số điện thoại</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="btn_Create">Tạo hóa đơn</string>
    <string name="btn_AddProduct">Chọn sản phẩm</string>
    <string name="hint_Pay">Trả</string>
    <string name="title_activity_new_product">NewProduct</string>
</resources>
